# trading-journal-archive

./: .dockerignore  .gitignore  ARCHIVE_PUBLICATION.md  CONFIGURAR_EDICION.md  DESKTOP_APP_PLAN.md  Dockerfile  PERMISOS_HASURA.md  PLAN_DE_INVESTIGACION.md  README.md  SECURITY.md  SETUP_DATABASE.md  debug-ai-sdk.js  docker-compose.prod.yml  next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  test-blocking.js  test-gemini.js  test-stream.js  trading-journal-plan-v2_1.md  tsconfig.json  turbo.json  update_workflow.py  update_workflow_v2.py
.github/workflows/: desktop-windows-build.yml
apps/api/: package.json
apps/desktop/: index.html  package-lock.json  package.json  (+3 more)
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: main.rs
migrations/: 001_create_trades_table.sql  002_add_broker_to_trades_activos.sql  003_add_external_ids.sql  004_add_journal_fields.sql  005_create_alerting_tables.sql  006_backfill_tipo_estrategia_binance_open.sql  007_alerts_runtime_config_v1.sql  008_alerts_telegram_replace_last.sql  009_journal_discipline_v2.sql  010_trading_sessions_daily_summary.sql  011_sl_override_audit.sql  012_execution_speed_and_protection_v3.sql  013_pending_limit_orders_v1.sql  014_desktop_device_sessions_v1.sql  015_sltp_snapshots_ai_analysis.sql
prisma/: schema.prisma
scripts/: alerts-monitor.js  apply-alerts-sql.js  binance-listener.js  dev-desktop-backend.mjs  dev-trading-full.mjs  load-dev-env.mjs
src/: middleware.ts
(+138 files in other folders)
