[package]
name = "trading_journal_desktop"
version = "0.1.0"
description = "Trading Journal Desktop Cockpit"
authors = ["agentame"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde_json = "1"
tauri-plugin-deep-link = "2"
tauri-plugin-opener = "2"

[target."cfg(any(target_os = \"macos\", windows, target_os = \"linux\"))".dependencies]
tauri-plugin-single-instance = { version = "2", features = ["deep-link"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
strip = true
